--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -16,7 +16,7 @@
   
   /* Стили для кнопки "Удалить" */
   .btnContacts {
-    background-color: #e74c3c;
+    background-color: blue;
     color: #fff;
     border: none;
     padding: 5px 10px;
